Wed May  6 09:36:41 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * _restclient.php,
    * _restclient_curl.php,
    * flaxerrors.php: Added licence/copyright text.
    * examples/newsml_search.php: Changed variable names.
    * examples/newsml_indexer.php: Allow crawling multiple dirs.

Mon May  4 13:48:45 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * examples/newsml_search.php,
    * examples/newsml_showdoc.php,
    * examples/newsml_indexer.php,
    * examples/newsml.xsl: Added simple search UI.

Mon May  4 11:58:09 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * flaxclient.php: Added database getDocCount() method.
    * unittests/test_docs.php: Added test for getDocCount().

Mon May  4 11:46:53 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * unittests/runtests.php: Changed FlaxSearchService constructor
      to default to web service URL (not test client).

Mon May  4 10:45:56 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_docs.php: Added test for long document text.
    * _restclient_curl.php: Disabled Expect: header as this causes 
      problems with the Flax server (possibly due to a bug in libcurl).

Fri May  1 17:41:58 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * examples/newsml_indexer.php: Started example NewsML indexer.

Fri May  1 14:43:22 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * flaxclient.php: Added default value for query filters.
    * unittests/test_search.php: Added some more tests.
    
Fri May  1 14:07:23 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * unittests/test_search.php: Got searchStructured() and tests working.

Fri May  1 10:22:08 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * unittests/test_search.php: Changed ranking search params.

Thu Apr 30 19:56:49 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
