@@ -1,3 +1,7 @@
+Sat May 09 12:56:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* _restclient_curl.php,flaxclient.php: Add version support.
+
 Wed May  6 09:36:41 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
 
     * flaxclient.php,
